sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: 'while' expected but 'if' found.
	if(x==true) return
        ^AlgCocktailSort1:19: error: '(' expected but '}' found.
}
^